--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
                 </div>
     
                 <div class="portfolio-item image relogio">
-                    <img src="assets/images/Projeto Relógio James Lucas Black.jpg" alt="Portfolio-Image" />
+                    <img src="assets/images/Projeto Relógio Verde Roxo.jpg" alt="Portfolio-Image" />
                     <div class="content">
                         <h4>projeto relógio</h4>
                         <a href="https://jameslucasjldev.github.io/projetorelogio/">
                             <p>ver projeto</p>
                         </a>
-                        <a data-effect="mfp-newspaper" href="assets/images/Projeto Relógio James Lucas Black.jpg" target="_blank" class="view-btn"><i class="fas fa-search-plus"></i></a>
+                        <a data-effect="mfp-newspaper" href="assets/images/Projeto Relógio Verde Roxo.jpg" target="_blank" class="view-btn"><i class="fas fa-search-plus"></i></a>
                     </div>
                 </div>
     
